# mpc-algebra

./: Cargo.toml  test.zsh
analysis/data/: groth16.csv
analysis/plotting/: groth16.R
scripts/: bench.zsh  exp.zsh  mpc.zsh
src/: client.rs  coord.rs  mpc.rs  proof.rs
src/mpc/: channel.rs  groth.rs  marlin.rs  mod.rs  poly.rs
src/mpc/groth/: prover.rs  r1cs_to_qap.rs
src/mpc/poly/: pc.rs
