[package]
name = "mpc-algebra"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = [ "derive" ] }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
lazy_static = "1"
derivative = { version = "2.0", features = ["use_core"], optional = true}
log = "0.4"

rand = { version = "0.7", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rayon = { version = "1", optional = true }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

env_logger = "0.8"
structopt = "0.3"
clap = "2"
merlin = "3"
sha2 = "0.9"
